syntax = "proto3";

import "com/beansmith/Entity.proto";
package com.beansmith;


message TestEntity {
  string tableName = 1;
  int64 primaryKey = 5;
  string this_was_here = 2;
  int64 so_was_i = 3;
  repeated KevValuePair kvp = 4;
}