syntax = "proto3";

package com.beansmith;
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc fetchEntityData (HelloRequest) returns (EntityData) {}
  rpc sendEntityData (EntityData) returns (EntityData) {}
  rpc sendMapperSample (MapperSample) returns (MapperSample) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string surname = 2;
  string message = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  string headerx = 2;
}

message ErrorReponse {
  string message = 1;
  string stack = 2;
}


message KevValuePair {
  string key = 1;
  DataValue value = 2;
}

message DataValue {
  oneof value {
    bool  bool_value = 1;
    float float_value = 2;
    int32 int_value = 3;
    double  double_value = 4;
    int64 long_value = 5;
    bytes bytes_value = 6;
    string string_value = 7;
  }
}

message EntityData {
  string name = 1;
  repeated KevValuePair kvp = 2;
  repeated EntityData child = 3;
}

message Country{
  string name = 1;
  string country_code = 2;
  string short_name = 3;
  string LongName = 4;
  repeated KevValuePair kvp = 5;

}


message MapperSample {
  string tableName = 1;
  int64 primaryKey = 5;
  string this_was_here = 2;
  int64 so_was_i = 3;
  repeated KevValuePair kvp = 4;
}