syntax = "proto3";

package com.crd.alpha.edm.domain;

import "domain/Entity.proto";
import "domain/Domain.proto";
// The greeting service definition.
service DomainService {
  // Sends a greeting
  rpc sendEntityData (EntityData) returns (EntityData) {}
  rpc sendTestEntity (TestEntity) returns (TestEntity) {}
}